--- a/templates/result.html
+++ b/templates/result.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Sorting Results</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style_result.css') }}">
+</head>
+<body>
+    <h1>Sorting Results</h1>
+    <div class="result-container">
+        <h2>Algorithm Used : {{ algorithm_used }}</h2>
 
+        <h2>Original Numbers :</h2>
+        <p>{{ numbers }}</p>
+
+        <h2>Sorted Numbers :</h2>
+        <p>{{ sorted_numbers }}</p>
+    </div>
+</body>
+</html>
