Changes to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Sorting Algorithm Selector</h1>
     <form action="/sort" method="post">
-        <label for="numbers">Enter numbers (space-separated):</label><br>
+        <label for="numbers">Enter numbers as an input  (space-separated):</label><br>
         <input type="text" id="numbers" name="numbers" required><br><br>
         <label for="algorithm">Select sorting algorithm:</label>
         <select name="algorithm" id="algorithm">
