--- a/templates/result.html
+++ b/templates/result.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Sorting Results</h1>
     <div class="result-container">
-        <h2>SORTING ALGORITHM Used : {{ algorithm_used }}</h2>
+        <h2>SORTING ALGORITHM Used here is: {{ algorithm_used }}</h2>
 
         <h2>Original Numbers :</h2>
         <p>{{ numbers }}</p>
